syntax="proto3";

package consignee_info;

option go_package="app/user/manifest/protobuf/user_info/v1";

import "pbentity/consignee_info.proto";

service consignee_info{
  rpc Create(ConsigneeInfoCreateReq) returns (ConsigneeInfoCreateRes) {}
  rpc Delete(ConsigneeInfoDeleteReq) returns (ConsigneeInfoDeleteRes) {}
  rpc Update(ConsigneeInfoUpdateReq) returns (ConsigneeInfoUpdateRes) {}
  rpc GetList(ConsigneeInfoGetListReq) returns (ConsigneeInfoGetListRes){}
}

//新消息定义
message ConsigneeInfoCreateReq{
  uint32 UserId=1;
  uint32 IsDefault=2; // 默认地址1 非默认0
  string Name=3;// 姓名
  string Phone=4;//电话
  string Province  = 5;  // 省
  string City      = 6;  // 市
  string Town      = 7;  // 县区
  string Street    = 8;  // 街道乡镇
  string Detail    = 9; // 地址详情
}

message ConsigneeInfoDeleteReq{
  uint32 id=1;
}

message ConsigneeInfoUpdateReq{
  uint32 id=1;
}

message ConsigneeInfoGetListReq{
  uint32 page=1;
  uint32 size=2;
}


message ConsigneeInfoCreateRes {
  uint32 id = 1;
}

message ConsigneeInfoDeleteRes {

}

message ConsigneeInfoUpdateRes {
  uint32 id = 1;
}

message ConsigneeInfoGetListRes {
  ConsigneeInfoListResponse data = 1;
}

message ConsigneeInfoListResponse {
  repeated pbentity.ConsigneeInfo list = 1;  //收货信息列表
  uint32 page = 2;  //当前页码
  uint32 size = 3;  //每页大小
  uint32 total = 4; //总记录数
}


